[package]
name = "cv-builder"
version = "0.1.0"
authors = ["SergChr <sergs.chr2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
rust-embed = { version = "5.5.1", features = ["debug-embed", "compression"] }
regex = "1.3.9"