[package]
name = "qcv"
version = "0.2.0"
authors = ["SergChr <sergs.chr2@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A JSON-based resume generator"
readme = "README.md"
homepage = "https://github.com/SergChr/qcv"
repository = "https://github.com/SergChr/qcv"
keywords = ["cli", "json", "resume", "generator"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
rust-embed = { version = "5.5.1", features = ["debug-embed", "compression"] }
regex = "1.3.9"